Fix overflow

--- a/src/assets/styles/components/_card.scss
+++ b/src/assets/styles/components/_card.scss
@@ -20,6 +20,7 @@
     &__composition {
         display: grid;
         gap: $space-half;
+        overflow-y: auto;
 
         &__img{
             width: 100%;
